--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,10 @@
                             <pattern>reactor</pattern>
                             <shadedPattern>relocation.reactor</shadedPattern>
                         </relocation>
+                        <!--<relocation>
+                            <pattern>io.lettuce</pattern>
+                            <shadedPattern>relocation.io.lettuce</shadedPattern>
+                        </relocation>-->
                     </relocations>
                 </configuration>
                 <executions>
