修改打包方式

--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.8.39</version>
+            <version>5.8.40</version>
         </dependency>
         <!-- https://central.sonatype.com/artifact/io.lettuce/lettuce-core/versions -->
         <dependency>
@@ -88,7 +88,7 @@
                                 <filter>
                                     <artifact>*:*</artifact>
                                     <excludes>
-                                        <exclude>assets/**</exclude>
+                                        <!--<exclude>assets/**</exclude>
                                         <exclude>license/**</exclude>
                                         <exclude>META-INF/**</exclude>
                                         <exclude>mozilla/**</exclude>
@@ -100,7 +100,7 @@
                                         <exclude>*.ini</exclude>
                                         <exclude>*.html</exclude>
                                         <exclude>*.mappings</exclude>
-                                        <exclude>*.png</exclude>
+                                        <exclude>*.png</exclude>-->
                                     </excludes>
                                 </filter>
                             </filters>
