--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,8 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
-            <version>5.13.4</version>
+            <!-- 不能升级到6.x，升级到6.x需要jdk11 -->
+            <version>5.14.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
