--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>sunyu.util</groupId>
     <artifactId>util-redis</artifactId>
     <!-- {lettuce-core.version}_{util.version}_{jdk.version}_{architecture.version} -->
-    <version>6.8.1.RELEASE_1.0_jdk8_x64</version>
+    <version>7.0.0.RELEASE_1.0_jdk8_x64</version>
 
     <properties>
         <java.version>1.8</java.version>
@@ -35,14 +35,16 @@
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>5.8.40</version>
+            <version>5.8.41</version>
         </dependency>
         <!-- https://central.sonatype.com/artifact/io.lettuce/lettuce-core/versions -->
         <dependency>
             <groupId>io.lettuce</groupId>
             <artifactId>lettuce-core</artifactId>
-            <version>6.8.1.RELEASE</version>
+            <version>7.0.0.RELEASE</version>
         </dependency>
+
+
         <!-- https://central.sonatype.com/artifact/org.junit.jupiter/junit-jupiter/versions -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -55,7 +57,8 @@
 
     <build>
         <plugins>
-            <!-- https://central.sonatype.com/artifact/org.apache.maven.plugins/maven-shade-plugin/versions -->
+            <!--
+            https://central.sonatype.com/artifact/org.apache.maven.plugins/maven-shade-plugin/versions -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
@@ -71,16 +74,8 @@
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <relocations>
                                 <!--<relocation>
-                                    <pattern>io.netty</pattern>
-                                    <shadedPattern>relocation.io.netty</shadedPattern>
-                                </relocation>
-                                <relocation>
-                                    <pattern>org</pattern>
-                                    <shadedPattern>relocation.org</shadedPattern>
-                                </relocation>
-                                <relocation>
-                                    <pattern>reactor</pattern>
-                                    <shadedPattern>relocation.reactor</shadedPattern>
+                                    <pattern>com.fasterxml.jackson</pattern>
+                                    <shadedPattern>shaded.com.fasterxml.jackson</shadedPattern>
                                 </relocation>-->
                             </relocations>
                             <shadedArtifactAttached>true</shadedArtifactAttached>
@@ -89,19 +84,11 @@
                                 <filter>
                                     <artifact>*:*</artifact>
                                     <excludes>
-                                        <!--<exclude>assets/**</exclude>
-                                        <exclude>license/**</exclude>
-                                        <exclude>META-INF/**</exclude>
-                                        <exclude>mozilla/**</exclude>
-                                        <exclude>schema/**</exclude>
-                                        <exclude>model/**</exclude>
-                                        <exclude>*.crx</exclude>
-                                        <exclude>*.properties</exclude>
-                                        <exclude>*.xml</exclude>
-                                        <exclude>*.ini</exclude>
-                                        <exclude>*.html</exclude>
-                                        <exclude>*.mappings</exclude>
-                                        <exclude>*.png</exclude>-->
+                                        <!-- 关键：移除签名文件，避免胖包校验失败 -->
+                                        <exclude>META-INF/*.SF</exclude>
+                                        <exclude>META-INF/*.DSA</exclude>
+                                        <exclude>META-INF/*.RSA</exclude>
+                                        <!-- 可选：保留其他静态资源，必要时再按需排除 -->
                                     </excludes>
                                 </filter>
                             </filters>
@@ -111,7 +98,8 @@
             </plugin>
 
             <!-- 源码也上传到私服 -->
-            <!-- https://central.sonatype.com/artifact/org.apache.maven.plugins/maven-source-plugin/versions -->
+            <!--
+            https://central.sonatype.com/artifact/org.apache.maven.plugins/maven-source-plugin/versions -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
@@ -127,7 +115,8 @@
             </plugin>
 
             <!-- 跳过单元测试 -->
-            <!-- https://central.sonatype.com/artifact/org.apache.maven.plugins/maven-surefire-plugin/versions -->
+            <!--
+            https://central.sonatype.com/artifact/org.apache.maven.plugins/maven-surefire-plugin/versions -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -137,7 +126,8 @@
                 </configuration>
             </plugin>
 
-            <!-- https://central.sonatype.com/artifact/org.apache.maven.plugins/maven-compiler-plugin/versions -->
+            <!--
+            https://central.sonatype.com/artifact/org.apache.maven.plugins/maven-compiler-plugin/versions -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
