--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>sunyu.util</groupId>
@@ -44,7 +44,6 @@
             <version>7.1.0.RELEASE</version>
         </dependency>
 
-
         <!-- https://central.sonatype.com/artifact/org.junit.jupiter/junit-jupiter/versions -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -70,14 +69,65 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <!-- 添加以下配置来禁用 dependency-reduced-pom.xml 文件生成 -->
+                            <!-- 禁用 dependency-reduced-pom.xml 文件生成 -->
                             <createDependencyReducedPom>false</createDependencyReducedPom>
                             <relocations>
-                                <!--<relocation>
-                                    <pattern>com.fasterxml.jackson</pattern>
-                                    <shadedPattern>shaded.com.fasterxml.jackson</shadedPattern>
-                                </relocation>-->
+                                <!-- 重命名Hutool包 -->
+                                <relocation>
+                                    <pattern>cn.hutool</pattern>
+                                    <shadedPattern>sunyu.util.shaded.cn.hutool</shadedPattern>
+                                </relocation>
+                                <!-- 重命名Lettuce包 -->
+                                <relocation>
+                                    <pattern>io.lettuce</pattern>
+                                    <shadedPattern>sunyu.util.shaded.io.lettuce</shadedPattern>
+                                </relocation>
+                                <!-- 重命名Netty包 -->
+                                <relocation>
+                                    <pattern>io.netty</pattern>
+                                    <shadedPattern>sunyu.util.shaded.io.netty</shadedPattern>
+                                </relocation>
+                                <!-- 重命名Project Reactor -->
+                                <relocation>
+                                    <pattern>reactor.core</pattern>
+                                    <shadedPattern>sunyu.util.shaded.reactor.core</shadedPattern>
+                                </relocation>
+                                <!-- 重命名Reactor Netty -->
+                                <relocation>
+                                    <pattern>reactor.netty</pattern>
+                                    <shadedPattern>sunyu.util.shaded.reactor.netty</shadedPattern>
+                                </relocation>
+                                <!-- 重命名Netty的native库 -->
+                                <relocation>
+                                    <pattern>META-INF/native/libnetty</pattern>
+                                    <shadedPattern>META-INF/native/sunyu_util_shaded_libnetty</shadedPattern>
+                                </relocation>
+                                <!-- 重命名Netty的native镜像 -->
+                                <relocation>
+                                    <pattern>META-INF/native/netty</pattern>
+                                    <shadedPattern>META-INF/native/sunyu_util_shaded_netty</shadedPattern>
+                                </relocation>
                             </relocations>
+                            <transformers>
+                                <!-- 合并META-INF/services文件 -->
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                <!-- 处理Apache许可证 -->
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer"/>
+                                <!-- 处理Lettuce的RedisCodec服务文件 -->
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    <resource>META-INF/services/io.lettuce.core.codec.RedisCodec</resource>
+                                </transformer>
+                                <!-- 处理Netty的native库 -->
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <manifestEntries>
+                                        <Multi-Release>true</Multi-Release>
+                                    </manifestEntries>
+                                </transformer>
+                            </transformers>
                             <shadedArtifactAttached>true</shadedArtifactAttached>
                             <shadedClassifierName>shaded</shadedClassifierName>
                             <filters>
@@ -88,7 +138,9 @@
                                         <exclude>META-INF/*.SF</exclude>
                                         <exclude>META-INF/*.DSA</exclude>
                                         <exclude>META-INF/*.RSA</exclude>
-                                        <!-- 可选：保留其他静态资源，必要时再按需排除 -->
+                                        <!-- 排除重复的NOTICE文件 -->
+                                        <exclude>META-INF/NOTICE*</exclude>
+                                        <exclude>META-INF/LICENSE*</exclude>
                                     </excludes>
                                 </filter>
                             </filters>
@@ -103,7 +155,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>3.3.1</version>
+                <version>3.4.0</version>
                 <executions>
                     <execution>
                         <phase>compile</phase>
