更新打包方式，避免包冲突

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>sunyu.util</groupId>
     <artifactId>util-redis</artifactId>
     <!-- {lettuce-core.version}_{util.version}_{jdk.version}_{architecture.version} -->
-    <version>6.2.7.RELEASE_1.0_jdk8_x64</version>
+    <version>5.3.7.RELEASE_1.0_jdk8_x64</version>
 
     <properties>
         <java.version>1.8</java.version>
@@ -36,12 +36,15 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>5.8.43</version>
+            <optional>true</optional>
         </dependency>
         <!-- https://central.sonatype.com/artifact/io.lettuce/lettuce-core/versions -->
         <dependency>
             <groupId>io.lettuce</groupId>
             <artifactId>lettuce-core</artifactId>
-            <version>6.2.7.RELEASE</version>
+            <version>5.3.7.RELEASE</version>
+            <classifier>shaded</classifier>
+            <optional>true</optional>
         </dependency>
 
         <!-- https://central.sonatype.com/artifact/org.junit.jupiter/junit-jupiter/versions -->
@@ -71,41 +74,51 @@
                         <configuration>
                             <!-- 禁用 dependency-reduced-pom.xml 文件生成 -->
                             <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <!-- 重命名包：批量给第三方包加统一前缀 -->
                             <relocations>
-                                <!-- 重命名Hutool包 -->
                                 <relocation>
-                                    <pattern>cn.hutool</pattern>
-                                    <shadedPattern>sunyu.util.relocations.redis.cn.hutool</shadedPattern>
-                                </relocation>
-                                <!-- 重命名Lettuce包 -->
-                                <relocation>
-                                    <pattern>io.lettuce</pattern>
-                                    <shadedPattern>sunyu.util.relocations.redis.io.lettuce</shadedPattern>
-                                </relocation>
-                                <!-- 重命名Netty包 -->
-                                <relocation>
-                                    <pattern>io.netty</pattern>
-                                    <shadedPattern>sunyu.util.relocations.redis.io.netty</shadedPattern>
-                                </relocation>
-                                <!-- 重命名Project Reactor -->
-                                <relocation>
-                                    <pattern>reactor</pattern>
-                                    <shadedPattern>sunyu.util.relocations.redis.reactor</shadedPattern>
+                                    <!-- 基础匹配（这里用空或通配思路，核心靠includes限定） -->
+                                    <pattern></pattern>
+                                    <!-- 统一前缀：所有匹配的包都会被加到这个路径下 -->
+                                    <shadedPattern>relocations.${groupId}.</shadedPattern>
+                                    <!-- 重命名包 -->
+                                    <includes>
+                                        <include>org.apache.**</include>
+                                        <include>org.slf4j.**</include>
+                                        <include>org.springframework.**</include>
+                                        <include>org.junit.**</include>
+                                        <include>org.latencyutils.**</include>
+                                        <include>org.hdrhistogram.**</include>
+                                        <include>com.fasterxml.**</include>
+                                        <include>com.google.**</include>
+                                        <include>io.netty.**</include>
+                                        <include>io.projectreactor.**</include>
+                                        <include>io.zipkin.**</include>
+                                        <include>io.reactivex.**</include>
+                                        <include>javax.enterprise.**</include>
+                                        <include>javax.inject.**</include>
+                                        <include>cn.hutool.**</include>
+                                    </includes>
+                                    <!-- 不需要重命名的包 -->
+                                    <excludes>
+                                        <exclude>${groupId}.**</exclude>
+                                        <exclude>com.taosdata.**</exclude>
+                                        <exclude>io.lettuce.**</exclude>
+                                        <exclude>uml.tech.**</exclude>
+                                        <exclude>sunyu.**</exclude>
+                                    </excludes>
                                 </relocation>
                             </relocations>
                             <transformers>
                                 <!-- 合并META-INF/services文件 -->
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
-                                <!-- 处理Apache许可证 -->
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer"/>
-                                <!-- 处理Lettuce的RedisCodec服务文件 -->
+                                <!-- 处理Apache的META-INF/DISCLAIMER文件 -->
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
-                                    <resource>META-INF/services/io.lettuce.core.codec.RedisCodec</resource>
+                                    <resource>META-INF/DISCLAIMER</resource>
                                 </transformer>
-                                <!-- 设置多版本JAR支持，兼容Java 9+的多版本特性 -->
+                                <!-- 处理MANIFEST.MF文件 -->
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
@@ -119,18 +132,10 @@
                                 <filter>
                                     <artifact>*:*</artifact>
                                     <excludes>
-                                        <!-- 排除META-INF中不需要的文件，但保留MANIFEST.MF和services目录 -->
-                                        <exclude>META-INF/maven/**</exclude>
-                                        <exclude>META-INF/DEPENDENCIES</exclude>
-                                        <exclude>META-INF/LICENSE*</exclude>
-                                        <exclude>META-INF/NOTICE*</exclude>
+                                        <!-- 关键：移除签名文件，避免胖包校验失败 -->
                                         <exclude>META-INF/*.SF</exclude>
                                         <exclude>META-INF/*.DSA</exclude>
                                         <exclude>META-INF/*.RSA</exclude>
-                                        <exclude>META-INF/native-image/**</exclude>
-                                        <exclude>META-INF/spring/**</exclude>
-                                        <exclude>META-INF/*.properties</exclude>
-                                        <exclude>META-INF/spring.factories</exclude>
                                     </excludes>
                                 </filter>
                             </filters>
