更改打包方式，避免依赖冲突

--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>sunyu.util</groupId>
     <artifactId>util-redis</artifactId>
     <!-- {lettuce-core.version}_{util.version}_{jdk.version}_{architecture.version} -->
-    <version>5.3.7.RELEASE_1.0_jdk8_x64</version>
+    <version>6.0.9.RELEASE_1.0_jdk8_x64</version>
 
     <properties>
         <java.version>1.8</java.version>
@@ -42,7 +42,7 @@
         <dependency>
             <groupId>io.lettuce</groupId>
             <artifactId>lettuce-core</artifactId>
-            <version>5.3.7.RELEASE</version>
+            <version>6.0.9.RELEASE</version>
             <classifier>shaded</classifier>
             <optional>true</optional>
         </dependency>
@@ -80,7 +80,7 @@
                                     <!-- 基础匹配（这里用空或通配思路，核心靠includes限定） -->
                                     <pattern></pattern>
                                     <!-- 统一前缀：所有匹配的包都会被加到这个路径下 -->
-                                    <shadedPattern>relocations.${groupId}.</shadedPattern>
+                                    <shadedPattern>relocations.${project.groupId}.</shadedPattern>
                                     <!-- 重命名包 -->
                                     <includes>
                                         <include>org.apache.**</include>
@@ -89,6 +89,7 @@
                                         <include>org.junit.**</include>
                                         <include>org.latencyutils.**</include>
                                         <include>org.hdrhistogram.**</include>
+                                        <include>org.jetbrains.**</include>
                                         <include>com.fasterxml.**</include>
                                         <include>com.google.**</include>
                                         <include>io.netty.**</include>
@@ -101,7 +102,7 @@
                                     </includes>
                                     <!-- 不需要重命名的包 -->
                                     <excludes>
-                                        <exclude>${groupId}.**</exclude>
+                                        <exclude>${project.groupId}.**</exclude>
                                         <exclude>com.taosdata.**</exclude>
                                         <exclude>io.lettuce.**</exclude>
                                         <exclude>uml.tech.**</exclude>
@@ -112,15 +113,15 @@
                             <transformers>
                                 <!-- 合并META-INF/services文件 -->
                                 <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                                    implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                 <!-- 处理Apache的META-INF/DISCLAIMER文件 -->
                                 <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                                    implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
                                     <resource>META-INF/DISCLAIMER</resource>
                                 </transformer>
                                 <!-- 处理MANIFEST.MF文件 -->
                                 <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
                                         <Multi-Release>true</Multi-Release>
                                     </manifestEntries>
@@ -169,7 +170,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.4</version>
                 <configuration>
-                    <skip>true</skip>
+                    <skip>${skipTests}</skip>
                 </configuration>
             </plugin>
 
