--- a/src/test/resources/application-prod.properties
+++ b/src/test/resources/application-prod.properties
@@ -1,4 +1,4 @@
-redis.standalone.uri=redis://172.16.1.22:26379/0
+redis.standalone.uri=redis://rPo4IdPmg9@172.16.1.180:31091/2
 
+redis.cluster.uri=redis://172.16.1.29:7001,redis://172.16.1.10:7002,redis://172.16.1.26:7003,redis://172.16.1.25:7004,redis://172.16.1.11:7005,redis://172.16.1.19:7006
 redis.cluster.nodes=172.16.1.29:7001,172.16.1.10:7002,172.16.1.26:7003,172.16.1.25:7004,172.16.1.11:7005,172.16.1.19:7006
-
